@@ -11,6 +11,7 @@
       special versions for the old behavior
     * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
       VimperatorLeave respectively
+    * add shell command completion for :!
     * add :map <silent> to prevent a mapping from being echoed
     * add guioptions=nN to number tabs
     * add :loadplugins command
